--- a/Join/View/FindIdeas/FriendProjectCell.xib
+++ b/Join/View/FindIdeas/FriendProjectCell.xib
@@ -4,13 +4,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RecommendationCell" customModule="Join" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FriendProjectCell" customModule="Join" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="140"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -20,10 +21,10 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.on.rectangle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="EAR-br-0CJ">
                         <rect key="frame" x="0.0" y="0.5" width="100" height="139"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18v-nq-9vB">
-                        <rect key="frame" x="8" y="111" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18v-nq-9vB">
+                        <rect key="frame" x="8" y="115" width="84" height="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                        <color key="textColor" name="Gray5"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -33,6 +34,7 @@
                 <constraint firstItem="18v-nq-9vB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="6Ct-pD-cqd"/>
                 <constraint firstAttribute="bottom" secondItem="EAR-br-0CJ" secondAttribute="bottom" id="Itz-jG-RK4"/>
                 <constraint firstItem="EAR-br-0CJ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Pi1-dy-o7M"/>
+                <constraint firstAttribute="trailing" secondItem="18v-nq-9vB" secondAttribute="trailing" constant="8" id="Tfu-Nx-hrO"/>
                 <constraint firstAttribute="trailing" secondItem="EAR-br-0CJ" secondAttribute="trailing" id="VRL-TR-s9S"/>
                 <constraint firstItem="EAR-br-0CJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="h5m-ds-D9E"/>
                 <constraint firstAttribute="bottom" secondItem="18v-nq-9vB" secondAttribute="bottom" constant="8" id="s9Z-MQ-Hkh"/>
@@ -46,5 +48,8 @@
     </objects>
     <resources>
         <image name="photo.on.rectangle.fill" catalog="system" width="128" height="97"/>
+        <namedColor name="Gray5">
+            <color red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
