--- a/Join/View/Chat/ChatListCell.xib
+++ b/Join/View/Chat/ChatListCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,28 +27,42 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dif-by-o6T">
-                        <rect key="frame" x="80" y="17.5" width="224" height="55.5"/>
+                        <rect key="frame" x="80" y="17.5" width="190" height="55.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHp-C3-vPS">
-                                <rect key="frame" x="0.0" y="0.0" width="224" height="29"/>
+                                <rect key="frame" x="0.0" y="0.0" width="190" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Latest Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xX0-ZD-O3y">
-                                <rect key="frame" x="0.0" y="34" width="224" height="21.5"/>
+                                <rect key="frame" x="0.0" y="34" width="190" height="21.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" systemColor="opaqueSeparatorColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1z-4p-EYD">
+                        <rect key="frame" x="288" y="35" width="20" height="20"/>
+                        <color key="backgroundColor" name="Red"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="Qj9-7z-S0H"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="gcy-X3-ODd"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                        <inset key="contentEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="1"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="dif-by-o6T" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4Qu-aO-e52"/>
                     <constraint firstItem="dif-by-o6T" firstAttribute="leading" secondItem="ou0-oK-aLI" secondAttribute="trailing" constant="8" id="AWz-uq-irv"/>
                     <constraint firstItem="ou0-oK-aLI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Ug0-rQ-2bV"/>
-                    <constraint firstAttribute="trailing" secondItem="dif-by-o6T" secondAttribute="trailing" constant="16" id="Yfx-En-YQr"/>
+                    <constraint firstItem="c1z-4p-EYD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="UlB-Gw-DmY"/>
+                    <constraint firstAttribute="trailing" secondItem="c1z-4p-EYD" secondAttribute="trailing" constant="12" id="YRu-4I-m0c"/>
+                    <constraint firstAttribute="trailing" secondItem="dif-by-o6T" secondAttribute="trailing" constant="50" id="Yfx-En-YQr"/>
                     <constraint firstItem="ou0-oK-aLI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uhz-kd-gPK"/>
                 </constraints>
             </tableViewCellContentView>
@@ -55,12 +70,16 @@
             <connections>
                 <outlet property="latestMessageLabel" destination="xX0-ZD-O3y" id="8Y8-35-AWZ"/>
                 <outlet property="nameLabel" destination="XHp-C3-vPS" id="Xtb-Ch-ilC"/>
+                <outlet property="unreadMessagesAmountButton" destination="c1z-4p-EYD" id="VLj-wn-mr2"/>
                 <outlet property="userThumbnailImageView" destination="ou0-oK-aLI" id="iQI-LW-RWQ"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="81.696428571428569"/>
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="Red">
+            <color red="0.81999999284744263" green="0.28600001335144043" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
