--- a/Join/View/Base.lproj/Main.storyboard
+++ b/Join/View/Base.lproj/Main.storyboard
@@ -13,20 +13,20 @@
         <!--Mock Login View Controller-->
         <scene sceneID="8MK-dM-aOd">
             <objects>
-                <viewController id="1NE-3J-0Fa" customClass="MockLoginViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MockLoginViewController" id="1NE-3J-0Fa" customClass="MockLoginViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="x7i-qJ-YkP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gys-rA-fxC">
-                                <rect key="frame" x="89" y="489" width="87" height="35"/>
+                                <rect key="frame" x="89" y="489" width="72" height="35"/>
                                 <color key="backgroundColor" name="Blue1"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <inset key="contentEdgeInsets" minX="6" minY="4" maxX="6" maxY="4"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Friend 1"/>
+                                <state key="normal" title="Friend"/>
                                 <connections>
-                                    <action selector="chooseFriend1:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="X1c-oA-Bbv"/>
+                                    <action selector="chooseFriend:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="n7M-V8-lGg"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ckf-uB-PJB">
@@ -40,38 +40,40 @@
                                     <action selector="chooseRiley:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="zYi-4v-V6f"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xvs-K2-f4a">
-                                <rect key="frame" x="236" y="489" width="90" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Let-2Y-2cx">
+                                <rect key="frame" x="151" y="590" width="112" height="35"/>
                                 <color key="backgroundColor" name="Blue1"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <inset key="contentEdgeInsets" minX="6" minY="4" maxX="6" maxY="4"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Friend 2"/>
+                                <state key="normal" title="Passenger"/>
                                 <connections>
-                                    <action selector="chooseFriend2:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="FRb-Ue-QWo"/>
+                                    <action selector="choosePassenger:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="7wb-Ni-cph"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Let-2Y-2cx">
-                                <rect key="frame" x="167.5" y="590" width="79" height="35"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xvs-K2-f4a">
+                                <rect key="frame" x="200" y="489" width="140" height="35"/>
                                 <color key="backgroundColor" name="Blue1"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <inset key="contentEdgeInsets" minX="6" minY="4" maxX="6" maxY="4"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="新成員"/>
+                                <state key="normal" title="New Member"/>
                                 <connections>
-                                    <action selector="chooseNewMember:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="WDw-MX-2cr"/>
+                                    <action selector="chooseNewMember:" destination="1NE-3J-0Fa" eventType="touchUpInside" id="uBf-uG-QF0"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hFF-GX-KZx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Let-2Y-2cx" firstAttribute="top" secondItem="xvs-K2-f4a" secondAttribute="bottom" constant="66" id="5te-Uq-XZX"/>
                             <constraint firstItem="Ckf-uB-PJB" firstAttribute="top" secondItem="hFF-GX-KZx" secondAttribute="top" constant="330" id="7Om-zh-yOO"/>
+                            <constraint firstItem="xvs-K2-f4a" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Gys-rA-fxC" secondAttribute="trailing" constant="8" symbolic="YES" id="FNb-b9-dAu"/>
+                            <constraint firstItem="Gys-rA-fxC" firstAttribute="baseline" secondItem="xvs-K2-f4a" secondAttribute="baseline" id="JA1-dF-k5L"/>
                             <constraint firstItem="Let-2Y-2cx" firstAttribute="centerX" secondItem="x7i-qJ-YkP" secondAttribute="centerX" id="KWj-rx-lbh"/>
-                            <constraint firstItem="Let-2Y-2cx" firstAttribute="top" secondItem="Gys-rA-fxC" secondAttribute="bottom" constant="66" id="O9o-ER-yTt"/>
-                            <constraint firstItem="Gys-rA-fxC" firstAttribute="top" secondItem="Ckf-uB-PJB" secondAttribute="bottom" constant="80" id="ZgJ-j2-fab"/>
-                            <constraint firstItem="Gys-rA-fxC" firstAttribute="centerX" secondItem="x7i-qJ-YkP" secondAttribute="centerX" constant="-74.5" id="qAq-y9-KV1"/>
+                            <constraint firstItem="hFF-GX-KZx" firstAttribute="trailing" secondItem="xvs-K2-f4a" secondAttribute="trailing" constant="74" id="eLc-j4-Y1C"/>
+                            <constraint firstItem="Gys-rA-fxC" firstAttribute="leading" secondItem="hFF-GX-KZx" secondAttribute="leading" constant="89" id="twA-Ze-TF9"/>
+                            <constraint firstItem="Gys-rA-fxC" firstAttribute="top" secondItem="Ckf-uB-PJB" secondAttribute="bottom" constant="80" id="vfa-dF-Fe3"/>
                             <constraint firstItem="Ckf-uB-PJB" firstAttribute="centerX" secondItem="x7i-qJ-YkP" secondAttribute="centerX" id="wyv-Uo-KCn"/>
                         </constraints>
                     </view>
