--- a/Join/View/Chat.storyboard
+++ b/Join/View/Chat.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -49,6 +50,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="DAu-Py-tgo">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus.message" catalog="system" id="0ds-7h-Qdn">
+                            <color key="tintColor" name="Blue1"/>
                             <connections>
                                 <action selector="addGroupChatroom:" destination="xzF-Dt-Vic" id="dNV-5a-Ibc"/>
                             </connections>
@@ -78,7 +80,7 @@
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5i9-X7-Cya" customClass="MessageTypingSuperview" customModule="Join" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="806" width="414" height="90"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="Blue1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="DxK-z1-xbo"/>
                                 </constraints>
@@ -119,7 +121,7 @@
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dgl-eh-KOk" customClass="MessageTypingSuperview" customModule="Join" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="806" width="414" height="90"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="Blue1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="Jbe-GB-oRf"/>
                                 </constraints>
@@ -267,6 +269,9 @@
     </scenes>
     <resources>
         <image name="plus.message" catalog="system" width="128" height="113"/>
+        <namedColor name="Blue1">
+            <color red="0.0" green="0.22352941176470589" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
