--- a/Join/View/Chat/AddNewMemberCell.xib
+++ b/Join/View/Chat/AddNewMemberCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,6 +24,7 @@
                             <constraint firstAttribute="width" secondItem="e9B-Fb-uhp" secondAttribute="height" multiplier="1:1" id="Tvx-VR-3KN"/>
                             <constraint firstAttribute="width" constant="42" id="Y8O-DW-Cxy"/>
                         </constraints>
+                        <color key="tintColor" name="Blue1"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" image="plus" catalog="system"/>
                         <connections>
@@ -32,7 +34,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="邀請朋友加入" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="inn-cc-Of7">
                         <rect key="frame" x="66" y="24.5" width="104" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" name="Blue1"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -53,5 +55,8 @@
     </objects>
     <resources>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <namedColor name="Blue1">
+            <color red="0.0" green="0.22352941176470589" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
