--- a/Join/View/FindIdeas/IdeaCell.xib
+++ b/Join/View/FindIdeas/IdeaCell.xib
@@ -13,10 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="IdeaCell" customModule="Join" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="190"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="190"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5U-t7-mMv">
@@ -38,13 +38,13 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIn-ZT-RoF">
-                        <rect key="frame" x="16" y="58" width="25" height="20.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                        <color key="textColor" name="Blue2"/>
+                        <rect key="frame" x="16" y="58" width="18.5" height="14.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                        <color key="textColor" name="Gray3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="tib-H7-9w9">
-                        <rect key="frame" x="16" y="102.5" width="382" height="86"/>
+                        <rect key="frame" x="16" y="84.5" width="382" height="86"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="ZMY-JK-vUq">
                                 <rect key="frame" x="0.0" y="0.0" width="230" height="86"/>
@@ -140,9 +140,10 @@
                 <constraint firstItem="tib-H7-9w9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="tyZ-tb-XgW"/>
                 <constraint firstItem="9PQ-0q-vtM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="wE3-Vw-jcG"/>
                 <constraint firstItem="f5U-t7-mMv" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="wJY-oO-16K"/>
-                <constraint firstItem="tib-H7-9w9" firstAttribute="top" secondItem="eIn-ZT-RoF" secondAttribute="bottom" constant="24" id="xyJ-By-eTg"/>
+                <constraint firstItem="tib-H7-9w9" firstAttribute="top" secondItem="eIn-ZT-RoF" secondAttribute="bottom" constant="12" id="xyJ-By-eTg"/>
                 <constraint firstAttribute="trailing" secondItem="9PQ-0q-vtM" secondAttribute="trailing" constant="16" id="zlZ-CM-2Ft"/>
             </constraints>
+            <size key="customSize" width="414" height="191"/>
             <connections>
                 <outlet property="deadlineLabel" destination="5uK-Vi-F0t" id="IEC-Iw-Scp"/>
                 <outlet property="imageView" destination="8oS-aI-VM5" id="Gu7-3m-jaQ"/>
@@ -152,7 +153,7 @@
                 <outlet property="tagLabel" destination="eIn-ZT-RoF" id="BDb-XB-9cG"/>
                 <outlet property="titleLabel" destination="f5U-t7-mMv" id="6SC-5h-B4I"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="77.678571428571431"/>
+            <point key="canvasLocation" x="137.68115942028987" y="67.96875"/>
         </collectionViewCell>
     </objects>
     <resources>
@@ -163,9 +164,6 @@
         <image name="photo.artframe" catalog="system" width="128" height="93"/>
         <namedColor name="Blue1">
             <color red="0.0" green="0.22352941176470589" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Blue2">
-            <color red="0.0" green="0.50588235294117645" blue="0.77254901960784317" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Gray1">
             <color red="0.24705882352941178" green="0.22745098039215686" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
