--- a/Join/View/Form/GoSelectionCell.xib
+++ b/Join/View/Form/GoSelectionCell.xib
@@ -30,7 +30,7 @@
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="La2-33-idV">
                         <rect key="frame" x="276" y="26.5" width="20" height="19"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" systemColor="tintColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="37r-2k-EEs"/>
                             <constraint firstAttribute="height" constant="20" id="izj-cL-DLx"/>
@@ -78,6 +78,9 @@
         <image name="chevron.down.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
