--- a/Join/View/Form/SingleLineInputCell.xib
+++ b/Join/View/Form/SingleLineInputCell.xib
@@ -12,70 +12,63 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SingleLineInputCell" customModule="Join" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="CvW-gn-vM3">
-                    <rect key="frame" x="20" y="16" width="374" height="88"/>
-                    <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cct-79-INT">
-                            <rect key="frame" x="0.0" y="0.0" width="43" height="20.5"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zB2-jm-MxY">
-                                    <rect key="frame" x="0.0" y="0.0" width="35" height="20.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mbn-W0-Ibg">
-                                    <rect key="frame" x="35" y="0.0" width="8" height="20.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" systemColor="systemPinkColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                        </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="補充說明" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqa-zW-utu">
-                            <rect key="frame" x="0.0" y="28.5" width="69.5" height="17.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ie-hB-XIW">
-                            <rect key="frame" x="0.0" y="54" width="374" height="34"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="9Ie-hB-XIW" firstAttribute="leading" secondItem="CvW-gn-vM3" secondAttribute="leading" id="EFP-s3-F4j"/>
-                        <constraint firstAttribute="trailing" secondItem="9Ie-hB-XIW" secondAttribute="trailing" id="WCB-Vv-CR2"/>
-                    </constraints>
-                </stackView>
-            </subviews>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <constraints>
-                <constraint firstItem="CvW-gn-vM3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="4nl-Fk-fsB"/>
-                <constraint firstAttribute="trailing" secondItem="CvW-gn-vM3" secondAttribute="trailing" constant="20" id="BmL-QW-wdV"/>
-                <constraint firstAttribute="bottom" secondItem="CvW-gn-vM3" secondAttribute="bottom" constant="16" id="Xbr-pL-Koo"/>
-                <constraint firstItem="CvW-gn-vM3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="yNz-lg-k6n"/>
-            </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SingleLineInputCell" customModule="Join" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="BrM-Ey-bWT">
+                        <rect key="frame" x="16" y="9" width="288" height="62.5"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A5G-gX-ukW">
+                                <rect key="frame" x="0.0" y="0.0" width="43" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d4f-c6-BJ4">
+                                        <rect key="frame" x="0.0" y="0.0" width="35" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGT-2j-hDC">
+                                        <rect key="frame" x="35" y="0.0" width="8" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" systemColor="systemPinkColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TD0-0F-mXu">
+                                <rect key="frame" x="0.0" y="28.5" width="288" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="editTextFieldText:" destination="KGk-i7-Jjw" eventType="editingChanged" id="aU4-qR-pAw"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="TD0-0F-mXu" firstAttribute="leading" secondItem="BrM-Ey-bWT" secondAttribute="leading" id="mhZ-6b-U5b"/>
+                            <constraint firstAttribute="trailing" secondItem="TD0-0F-mXu" secondAttribute="trailing" id="pPf-UW-AKs"/>
+                        </constraints>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="BrM-Ey-bWT" secondAttribute="trailing" constant="16" id="P4z-yc-RT3"/>
+                    <constraint firstItem="BrM-Ey-bWT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Yz3-8i-USy"/>
+                    <constraint firstItem="BrM-Ey-bWT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="f3p-St-Fq9"/>
+                </constraints>
+            </tableViewCellContentView>
+            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="instructionLabel" destination="tqa-zW-utu" id="94I-or-nsm"/>
-                <outlet property="mustFillSignLabel" destination="mbn-W0-Ibg" id="BXd-Cv-FkX"/>
-                <outlet property="textField" destination="9Ie-hB-XIW" id="cOx-f6-rur"/>
-                <outlet property="titleLabel" destination="zB2-jm-MxY" id="vO0-f1-tTI"/>
+                <outlet property="inputTextField" destination="TD0-0F-mXu" id="f24-sL-a7U"/>
+                <outlet property="titleLabel" destination="d4f-c6-BJ4" id="Nlc-dm-Iqa"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="106.47321428571428"/>
-        </view>
+            <point key="canvasLocation" x="144.92753623188406" y="69.642857142857139"/>
+        </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
