--- a/Join/View/Personal/GoNextPageButtonCell.xib
+++ b/Join/View/Personal/GoNextPageButtonCell.xib
@@ -40,7 +40,7 @@
             <connections>
                 <outlet property="button" destination="cOA-Zz-XUz" id="rA5-7Q-PKG"/>
             </connections>
-            <point key="canvasLocation" x="139" y="83"/>
+            <point key="canvasLocation" x="137.68115942028987" y="82.366071428571431"/>
         </tableViewCell>
     </objects>
     <resources>
